--- a/settings.json
+++ b/settings.json
@@ -97,10 +97,14 @@
         "terminal.foreground": "#FFF",
         "terminalCursor.background": "#ff0000",
         "terminalCursor.foreground": "#ff0000",
-        "editorCursor.foreground": "#ff0000",
-        "editorLineNumber.activeForeground": "#ff0000",
+        "editorCursor.foreground": "#ffb6c1",
+        "editorLineNumber.activeForeground": "#ffb6c1",
         "editorLineNumber.foreground": "#dcdcdc",
-        "editor.lineHighlightBackground": "#ffe6ee"
+        "editor.lineHighlightBorder": "#ffb6c1",
+        "editorIndentGuide.activeBackground": "#ffb6c1",
+        // "editorIndentGuide.background": "#f5f5f5",  // mute this in dark
+        "tab.activeBackground": "#007acc",
+        "tab.unfocusedActiveBackground": "#000"   // mute this in light
     },
     "diffEditor.ignoreTrimWhitespace": false,
     "window.zoomLevel": -1,
@@ -109,8 +113,8 @@
     "workbench.list.smoothScrolling": true,
     "terminal.integrated.smoothScrolling": true,
     "editor.smoothScrolling": true,
-    "workbench.colorTheme": "Default Light+",
     "editor.cursorBlinking": "phase",
     "editor.lineNumbers": "relative",
+    "breadcrumbs.enabled": false,
 
 }
